unpackaged/main/default/objects/apps_credentials__mdt/apps_credentials__mdt.object-meta.xml
<CustomObject>
    <label>App credential</label>
    <pluralLabel>apps credentials</pluralLabel>
</CustomObject>