unpackaged/main/default/objects/apps_credentials__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>Client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>