unpackaged/main/default/objects/apps_credentials__mdt/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>Client_secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>