unpackaged/main/default/objects/apps_credentials__mdt/fields/grant_type__c.field-meta.xml
<CustomField>
    <fullName>grant_type__c</fullName>
    <label>Grant_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>