unpackaged/main/default/objects/apps_credentials__mdt/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>Url</label>
    <type>Url</type>
</CustomField>